--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -56,18 +56,19 @@
   font-size: 18px;
 }
 
-/* Window */
 window {
   margin: 0px;
-  padding: 10px;
-  border: 2px solid @blue;
-  border-radius: 8px;
+  padding: 4px; /* Reduce this value to make the "border" thinner */
+  border-radius: 20px;
+  border: 2px solid transparent;
   background-color: @base;
+  background-image: linear-gradient(to bottom right, rgba(33, 204, 255, 0.93), rgba(0, 255, 153, 0.93));
+  background-origin: border-box;
+  background-clip: border-box;
 }
 
 /* Inner Box */
 #inner-box {
-  margin: 5px;
   padding: 10px;
   border: none;
   background-color: @base;
@@ -75,9 +76,10 @@ window {
 
 /* Outer Box */
 #outer-box {
-  margin: 5px;
+  margin: 2px;
   padding: 10px;
   border: none;
+  border-radius: 20px;
   background-color: @base;
 }
 
