fix(swaync): Color for border is the same for that location of the screen

--- a/sway/.config/swaync/styles/central_control.css
+++ b/sway/.config/swaync/styles/central_control.css
@@ -116,7 +116,7 @@ scale slider:hover {
 .control-center {
   background: @base;
   border-radius: 16px;
-  border: 2px solid @lavender;
+  border: 2px solid rgba(0, 255, 153, 0.93);
   margin: 0;
   padding: 16px;
 }
