--- a/sway/.config/swaync/styles/central_control.css
+++ b/sway/.config/swaync/styles/central_control.css
@@ -13,7 +13,7 @@
 @define-color blue #89b4fa;
 @define-color lavender #b4befe;
 
-@define-color base alpha(#000000, 0.1);
+@define-color base alpha(#1e1e2e, 0.9);
 @define-color surface alpha(#000000, 0.1);
 @define-color text #cdd6f4;
 @define-color hoverBg alpha(@mauve, 1);
