--- a/sway/.config/swaync/styles/central_control.css
+++ b/sway/.config/swaync/styles/central_control.css
@@ -1,3 +1,4 @@
+
 @define-color rosewater #f5e0dc;
 @define-color flamingo #f2cdcd;
 @define-color pink #f5c2e7;
@@ -13,17 +14,16 @@
 @define-color blue #89b4fa;
 @define-color lavender #b4befe;
 
-@define-color base alpha(#1e1e2e, 0.9);
-@define-color surface alpha(#000000, 0.1);
 @define-color text #cdd6f4;
-@define-color hoverBg alpha(@mauve, 1);
-@define-color hoverFg #000000;
-@define-color activeBg alpha(@mauve, 1);
-@define-color activeFg #000000;
-@define-color shadow alpha(@lavender, 0.25);
+
+@define-color base alpha(#000000, 0.1);
+@define-color surface alpha(#ffffff, 0.1);
+@define-color hover alpha(#ffffff, 0.2);
+@define-color active alpha(alpha(@lavender, 0.5), 0.5);
 
 * {
-  all: unset;
+  color: @text;
+  /* all: unset; */
   font-size: 1rem;
   font-weight: 900;
   font-family:
@@ -33,33 +33,7 @@
     Helvetica,
     Arial,
     sans-serif;
-  background-clip: border-box;
-}
-
-button {
-  color: @text;
-  box-shadow: 0px 0px 8px 4px @shadow inset;
-}
-
-button:hover,
-button:active {
-  background-color: @activeBg;
-  color: @activeFg;
-  transition:
-    all 50ms cubic-bezier(0.55, 0, 0.28, 1.682),
-    box-shadow 50ms ease-in-out,
-    background-color 200ms ease-in-out;
-}
-
-/* Toggles */
-.toggle:checked {
-  background: #ff0000;
-}
-/*.toggle:not(:checked) {
-            color: rgba(128, 128, 128, 0.5);
-          }*/
-.toggle:checked:hover {
-  background: #ff0000;
+  transition: 200ms;
 }
 
 /* Avoid 'annoying' backgroud */
@@ -67,238 +41,308 @@ button:active {
   background: transparent;
 }
 
-/* Volume */
-
-.widget-volume button {
-  min-width: 32px;
-  min-height: 32px;
-  border-radius: 999px;
-}
-
-.widget-volume > revealer > list > row {
-  margin-top: 8px;
-}
-
-/* Sliders */
-
-/* progressbar, */
-/* progress, */
-/* trough { */
-/*   border-radius: 16px; */
-/* } */
-
-scale {
-}
-
-scale trough {
-  background-color: @surface;
-  border-radius: 999px;
-  box-shadow: 0px 0px 16px 8px @shadow inset;
-  border: unset;
-  margin: 0 8px;
-}
-
-scale trough highlight {
-  padding: 12px;
-  background: @activeBg;
-  border-radius: 16px;
-  border: unset;
-}
-
-scale slider {
-  background-color: #ff0000;
-}
-scale slider:hover {
-}
-
 /* CONTROL CENTER ------------------------------------------------------------------------ */
-
-.control-center {
-  background: @base;
-  border-radius: 16px;
-  border: 2px solid rgba(0, 255, 153, 0.93);
-  margin: 0;
-  padding: 16px;
-}
-
-.control-center > box {
-  margin-bottom: 8px;
-}
-.control-center > box:last-child {
-  margin-bottom: 0;
-}
 
 /* WIDGETS --------------------------------------------------------------------------- */
 
 /* Buttons menu */
 .widget-buttons-grid {
-}
-
-.widget-buttons-grid > flowbox > flowboxchild:nth-child(1),
-.widget-buttons-grid > flowbox > flowboxchild:nth-child(2) {
-  margin-bottom: 4px;
-}
-.widget-buttons-grid > flowbox > flowboxchild:nth-child(1),
-.widget-buttons-grid > flowbox > flowboxchild:nth-child(3) {
-  margin-right: 4px;
+  margin: 0 0 8px 4px;
+  border-radius: 20px;
 }
 
 .widget-buttons-grid > flowbox > flowboxchild > button {
+  margin: 0 4px 4px 0;
   padding: 1rem 4rem;
   background: @surface;
-  color: @text;
+  color: @crust;
   border-radius: 999px;
-  box-shadow: 0px 0px 16px 8px @shadow inset;
 }
 
 .widget-buttons-grid > flowbox > flowboxchild > button:hover {
-  background: @hoverBg;
-  color: @hoverFg;
+  background: @hover;
+  color: @crust;
 }
 
 .widget-buttons-grid > flowbox > flowboxchild > button.toggle:checked {
-  background: @activeBg;
-  color: @activeFg;
+  background: @active;
+  color: @crust;
+}
+
+/* Brightness */
+.widget-backlight {
+  padding: 8px 16px;
+  margin: 0 0 8px 0;
+  border-radius: 20px;
+  background: @surface;
+}
+
+slider {
+}
+
+.widget-backlight label {
+}
+
+.widget-backlight trough {
+  background: @surface;
+  margin: 0 8px;
+}
+
+.widget-backlight trough highlight {
+  background: @active;
+  border: unset;
+}
+
+.widget-backlight button {
+  padding: 0 4px;
+}
+
+/* Volume */
+.widget-volume {
+  padding: 8px 16px;
+  margin: 0 0 8px 0;
+  border-radius: 20px;
+  background: @surface;
+}
+
+slider {
+}
+
+.widget-volume label {
+}
+
+.widget-volume trough {
+  background: @surface;
+  margin: 0 8px;
+}
+
+.widget-volume trough highlight {
+  background: @active;
+  border: unset;
+}
+
+.widget-volume button {
+  padding: 0 4px;
 }
 
 /* Music player */
 .widget-mpris {
-  /* margin: 0px 8px 0px 0px; */
-}
-.widget-mpris-player {
-  border-radius: 16px;
-  margin: 0px;
-  padding: 8px;
   background: @surface;
-  box-shadow: 0px 0px 16px 8px @shadow inset;
+  border-radius: 20px;
+  margin: 0 4px 8px 4px;
 }
-.widget-mpris-player > box > image {
-  margin: 0px 0px -52px 0px;
-  border-radius: 16px;
-  box-shadow: none;
+
+.widget-mpris-player {
+  border-radius: 20px;
 }
+
+.widget-mpris > box > button {
+  border-radius: 20px;
+  background: @surface;
+  border-radius: 20px;
+  padding: 2px;
+}
+
+.widget-mpris button {
+  background: @active;
+  border-radius: 20px;
+  padding: 2px;
+  margin: 0 0 8px 0;
+}
+
+.widget-mpris button:hover {
+  background: @hover;
+}
+
 .widget-mpris-album-art {
-  all: unset;
-  border-radius: 16px;
+  border-radius: 20px;
   margin: 8px 0 0 8px;
 }
 
-.widget-mpris > box > carousel > widget > box > box:nth-child(2) {
-  margin: 8px 0px 8px 90px;
-}
-.widget-mpris > box > carousel > widget > box > box:nth-child(2) > button {
-  opacity: 1;
-  background: @base;
-  border-radius: 999px;
-  padding: 2px;
-  margin: 0px;
-}
-.widget-mpris
-  > box
-  > carousel
-  > widget
-  > box
-  > box:nth-child(2)
-  > button:hover {
-  background: @hoverBg;
-}
-carouselindicatordots {
-  /* opacity: 0; */
-}
-.widget-mpris button {
-  opacity: 0;
-  margin: 0 -16px 0 -16px;
-  box-shadow: 0px 0px 4px 2px @shadow;
-}
 .widget-mpris-title {
-  color: @text;
-  font-weight: 800;
-  font-size: 16px;
-  text-shadow: 0px 0px 4px #000000;
+  /* font-weight: 700; */
+  /* font-size: 1rem; */
 }
+
 .widget-mpris-subtitle {
-  color: @text;
-  font-size: 12px;
-  text-shadow: 0px 0px 4px #000000;
+  /* font-weight: 500; */
+  /* font-size: 0.8rem; */
 }
 
 /* Notification clear button */
 .widget-title {
   font-size: 1.5rem;
-  /* margin: 0 4px 0px 4px; */
+  margin: 0 4px 0px 4px;
 }
 
 .widget-title button {
   background: @surface;
-  border-radius: 16px;
+  border-radius: 20px;
   padding: 4px 16px;
-  box-shadow: 0px 0px 8px 4px @shadow inset;
 }
 
 .widget-title button:hover {
-  background: @hoverBg;
+  background: @hover;
 }
 
 /* Do not disturb */
 .widget-dnd {
-  /* margin: 0 4px 8px 4px; */
+  margin: 0 4px 8px 4px;
 }
 
 .widget-dnd > switch {
   color: @text;
   background: @surface;
-  border-radius: 16px;
+  border-radius: 20px;
   box-shadow: none;
   padding: 2px;
-  box-shadow: 0px 0px 8px 4px @shadow inset;
+}
+
+.widget-dnd > switch:hover {
+  background: @hover;
+  color: @crust;
+}
+
+.widget-dnd > switch:hover:checked {
+  background: @hover;
+  color: @crust;
 }
 
 .widget-dnd > switch:checked {
-  background: @surface;
-  color: @text;
+  background: @active;
+  color: @crust;
 }
 
 .widget-dnd > switch slider {
-  background: @surface;
-  color: @text;
-  border-radius: 16px;
-  border: 2px solid @activeBg;
+  color: @crust;
+  background: @hover;
+  border-radius: 20px;
+  border: 2px solid @active;
 }
 
-.widget-dnd > switch:hover > slider {
-  color: @text;
-  background: @surface;
-}
 .widget-dnd > switch:checked slider {
-  color: @text;
-  background: @surface;
+  color: @lavender;
+  background: @active;
 }
 
 /* Buttons */
 
+.control-center {
+  background: @base;
+  border-radius: 20px;
+  border: 2px solid @lavender;
+  margin: 0;
+  padding: 8px 8px 0 8px;
+}
+
 /* Notifications  */
-.control-center .notification-row {
-  /* background-color: @surface; */
-  background-color: alpha(#000000, 0.9);
-  border-radius: 16px;
-  padding: 8px 8px 8px 0;
-  box-shadow: 0px 0px 32px 8px @shadow inset;
-  margin-bottom: 8px;
+.control-center .notification-row .notification-background,
+.control-center
+  .notification-row
+  .notification-background
+  .notification.critical {
+  background-color: @surface;
+  border-radius: 20px;
+  margin: 4px 0;
+  padding: 8px 8px 8px 16px;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification.critical {
+  color: @red;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content {
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:first-child
+  > * {
+}
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > * {
+  min-height: 3.4em;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action {
+  background-color: @surface;
+  border-radius: 20px;
+}
+
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action:hover {
+  background-color: @hover;
+}
+
+.control-center .notification-row .notification-background .close-button {
+  background: transparent;
+  border-radius: 20px;
+  color: @text;
+  background-color: @surface;
+  margin: 0px;
+  padding: 4px;
+}
+
+.control-center .notification-row .notification-background .close-button:hover {
+  background-color: @hover;
+}
+
+progressbar,
+progress,
+trough {
+  border-radius: 20px;
+}
+
+progressbar {
+  background-color: @red;
+}
+
+trough {
+}
+
+trough highlight {
+  padding: 8px;
+  background: @lavender;
+  border: 2px solid @lavender;
+  border-radius: 20px;
+}
+
+trough slider {
+  outline: none;
   border: none;
 }
 
-.control-center .notification-row:first-child {
-  margin-bottom: 0;
-}
-.control-center .notification-row .close-button {
-  background-color: #ff0000;
-  opacity: 0;
+trough slider:hover {
 }
 
 /* Notifications expanded-group */
 
 .notification-group {
-  /* margin: 0 4px 8px 4px; */
+  margin: 0 4px 8px 4px;
 }
 .notification-group-headers {
   font-weight: 900;
@@ -314,11 +358,12 @@ carouselindicatordots {
 .notification-group-close-all-button {
   background: @surface;
   margin: 4px;
-  border-radius: 16px;
+  border-radius: 20px;
   padding: 8px;
 }
 
 .notification-group-collapse-button:hover,
 .notification-group-close-all-button:hover {
-  background: @hoverBg;
+  background: @hover;
 }
+
