--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -57,7 +57,6 @@ window#waybar {
 #cpu,
 #temperature,
 #custom-weather,
-#idle_inhibitor,
 #jack,
 #tray,
 #window,
@@ -65,6 +64,10 @@ window#waybar {
 #custom-notification, 
 #clock {
   padding: 0 5px;
+}
+
+#idle_inhibitor {
+  padding: 0 15 0 0;
 }
 #pulseaudio {
   padding-top: 3px;
