--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,136 +1,192 @@
 * {
-    color: #ffffff;
     border: none;
-    font-size: 20px;
-    font-family: "JetBrainsMono Nerd Font,JetBrainsMono NF" ;
-    min-height: 25px;
+    border-radius: 10px;
+    font-family: "JetBrainsMono Nerd Font";
+    font-weight: bold;
+    font-size: 16px;
+    min-height: 0;
 }
 
 window#waybar {
-  background: transparent;
-  margin: 5px;
- }
-
-#custom-logo {
-  padding: 0 10px;
+    background: rgba(21, 18, 27, 0);
+    color: #cdd6f4;
 }
 
-.modules-right {
-  padding-left: 5px;
-  border-radius: 15px 0 0 15px;
-  margin-top: 2px;
-  background-color: #1e1e2e; /* inner background */
-  border: 2px solid rgba(0, 255, 153, 0.93);
+tooltip {
+    background: #000000;
+    border-radius: 7px;
+    border-width: 2.5px;
+    border-style: solid;
+    border-color: #8aadf4;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
-.modules-center {
-  padding: 2px 2px; /* Adjust top/bottom and left/right padding */
-  margin-top: 2px;
-  border-radius: 15px;
-  background-image: linear-gradient(to right, rgba(33, 204, 255, 0.93), rgba(0, 255, 153, 0.93));
+
+
+#workspaces button {
+    color: #313244;
+    margin-right: 5px;
+    padding-right: 0px;
+    padding-left: 0px;
 }
 
-.modules-center > * {
-  background-color: #1e1e2e; /* inner background */
-  border-radius: 15px;
-  padding: 0 15px; /* Restore module padding */
+#workspaces button.active {
+    color: #89b4fa;
 }
 
-.modules-left {
-  padding: 2px 2px; /* Adjust top/bottom and left/right padding */
-  border-radius: 0 15px 15px 0;
-  margin-top: 2px;
-  background-color: #1e1e2e; /* inner background */
-  border: 2px solid rgba(33, 204, 255, 0.93);
+#workspaces button.focused {
+    color: #a6adc8;
+    background: #eba0ac;
+    border-radius: 13px;
 }
 
-#battery,
-#custom-clipboard,
-#custom-colorpicker,
-#custom-powerDraw,
-#bluetooth,
-#pulseaudio,
-#network,
-#disk,
-#memory,
-#backlight,
-#cpu,
-#temperature,
-#custom-weather,
-#jack,
-#tray,
-#window,
-#workspaces,
-#custom-notification, 
-#clock {
-  padding: 0 5px;
-}
 
-#idle_inhibitor {
-  padding: 0 15 0 0;
-}
-#pulseaudio {
-  padding-top: 3px;
-}
 
-#custom-updates {
-    padding: 0 20 0 0;
-}
-
-#temperature.critical,
-#pulseaudio.muted {
-  color: #FF0000;
-  padding-top: 0;
-}
-
-#pulseaudio-slider slider {
-  background: #A1BDCE;
-  background-color: transparent;
-  box-shadow: none;
-  margin-right: 7px;
-}
-
-#pulseaudio-slider trough {
-  margin-top: -3px;
-  min-width: 120px;
-  min-height: 10px;
-  margin-bottom: -4px;
-  border-radius: 8px;
-  background: #343434;
-}
-
-#pulseaudio-slider highlight {
-  border-radius: 8px;
-  background-color: #2096C0;
-}
-
-#clock{
-  color: #0DF599;
-}
-
-#battery {
-    padding: 0 5 0 0;
-}
-
-#battery.charging {
-    color: #ffffff;
-}
-
-#battery.warning:not(.charging) {
+#workspaces button.persistent {
     color: #f9e2af;
 }
 
-#battery.critical:not(.charging) {
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+
+#workspaces button.empty {
+    color: #313244;
 }
 
-@keyframes blink {
-    to {
-        color: #f38ba8;
-    }
+#workspaces button.active,
+#workspaces button.visible {
+    color: #89b4fa;
+    box-shadow: inset 0 -1px #1e1e2e;
+}
+
+#workspaces button.urgent {
+    color: #f38ba8;
+}
+#custom-weather,
+#language,
+#cpu,
+#window,
+#clock,
+#pulseaudio,
+#pulseaudio.microphone,
+#workspaces,
+#tray,
+#memory,
+#disk,
+#tray {
+    background: #1e1e2e;
+    opacity: 1.0;
+    padding: 1.5px 7px 1.5px 7px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 13px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+#workspaces {
+    background: #1e1e2e;
+    border-radius: 13px;
+    margin-left: 5px;
+    padding-right: 0px;
+}
+
+#window {
+    border-radius: 7px;
+    margin-left: 60px;
+    margin-right: 60px;
+}
+
+#clock {
+    color: #a6e3a1;
+    border-radius: 0px 13px 13px 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+#network {
+    color: #f9e2af;
+    border-radius: 7px 7px 7px 7px;
+    margin-right: 5px;
+}
+
+#custom-notifications {
+    color: #f9e2af;
+    border-radius: 7px 7px 7px 7px;
+    padding-left: 9px;
+    padding-right: 15px;
+    margin-left:  2px;
+    margin-right: 2px;
+
+}
+
+#custom-updates {
+    color: #89b4fa;
+    border-radius: 7px 7px 7px 7px;
+    border-left:  0px;
+    border-right: 0px;
+    margin-left:  2px;
+    margin-right: 2px;
+}
+
+#custom-player {
+ color: #cba6f7;
+ border-radius: 7px 7px 7px 7px;
+ padding-left: 4px;
+ margin-left:  5px;
+ margin-right: 5px;
+}
+
+#memory {
+    color: #89b4fa;
+    border-radius: 0px 0px 0px 0px;
+    margin-left: 0px;
+    margin-right:0px;
+}
+
+#disk {
+    color: #f9e2af;
+    border-radius: 0px 13px 13px 0px;
+    margin-left: 0px;
+}
+
+
+#bluetooth {
+  color: #89b4fa;
+  border-radius: 0px 13px 13px 0px;
+  margin-left: 5px;
+  margin-right: 5px;
+} 
+
+#pulseaudio {
+  color: #89b4fa;
+  border-radius: 0px 0px 0px 0px;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+#pulseaudio.microphone {
+    color: #cba6f7;
+    border-radius: 0px 0px 0px 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+#language {
+   border-radius: 13px 0px 0px 13px;
+   margin-right:0px;
+}
+
+#cpu {
+   border-radius: 13px 0px 0px 13px;
+   padding-left:10px;
+   margin-right:0px;
+   margin-left: 0px;
+}
+
+#custom-weather {
+   border-radius: 13px 13px 13px 13px;
+   margin-right: 0px
+   
 }
