--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,8 +2,7 @@
     border: none;
     border-radius: 10px;
     font-family: "JetBrainsMono Nerd Font";
-    font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
     min-height: 0;
 }
 
@@ -24,17 +23,15 @@ tooltip {
     padding-bottom: 5px;
 }
 
-
-
 #workspaces button {
-    color: #313244;
+    color: #f9e2af;
     margin-right: 5px;
     padding-right: 0px;
     padding-left: 0px;
 }
 
 #workspaces button.active {
-    color: #89b4fa;
+    color: #74c7ec;
 }
 
 #workspaces button.focused {
@@ -43,12 +40,9 @@ tooltip {
     border-radius: 13px;
 }
 
-
-
 #workspaces button.persistent {
     color: #f9e2af;
 }
-
 
 #workspaces button.empty {
     color: #313244;
@@ -71,13 +65,36 @@ tooltip {
 #pulseaudio,
 #pulseaudio.microphone,
 #workspaces,
-#tray,
 #memory,
 #disk,
+#network,
+#idle_inhibitor,
 #tray {
     background: #1e1e2e;
     opacity: 1.0;
     padding: 1.5px 7px 1.5px 7px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 13px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+#custom-updates {
+    background: #1e1e2e;
+    opacity: 1.0;
+    padding: 1.5px 20px 1.5px 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 13px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+#tray {
+    background: #1e1e2e;
+    opacity: 1.0;
+    padding: 1.5px 10px 1.5px 10px;
     margin-top: 5px;
     margin-bottom: 5px;
     border-radius: 13px;
@@ -121,15 +138,6 @@ tooltip {
 
 }
 
-#custom-updates {
-    color: #89b4fa;
-    border-radius: 7px 7px 7px 7px;
-    border-left:  0px;
-    border-right: 0px;
-    margin-left:  2px;
-    margin-right: 2px;
-}
-
 #custom-player {
  color: #cba6f7;
  border-radius: 7px 7px 7px 7px;
@@ -139,7 +147,7 @@ tooltip {
 }
 
 #memory {
-    color: #89b4fa;
+    color: #94e2d5;
     border-radius: 0px 0px 0px 0px;
     margin-left: 0px;
     margin-right:0px;
@@ -153,14 +161,14 @@ tooltip {
 
 
 #bluetooth {
-  color: #89b4fa;
+  color: #94e2d5;
   border-radius: 0px 13px 13px 0px;
   margin-left: 5px;
   margin-right: 5px;
 } 
 
 #pulseaudio {
-  color: #89b4fa;
+  color: #94e2d5;
   border-radius: 0px 0px 0px 0px;
   margin-right: 0px;
   margin-left: 0px;
@@ -173,9 +181,25 @@ tooltip {
     margin-right: 0px;
 }
 
+
 #language {
+   border-radius: 0px;
+   margin-left: 0px;
+   margin-right: 0px;
+}
+
+#idle_inhibitor{
    border-radius: 13px 0px 0px 13px;
-   margin-right:0px;
+   padding-right: 15px;
+   margin-right: 0px;
+}
+
+#idle_inhibitor.activated{
+    color: #94e2d5
+}
+
+#idle_inhibitor.deactivated {
+    color: #cdd6f4;
 }
 
 #cpu {
@@ -187,6 +211,5 @@ tooltip {
 
 #custom-weather {
    border-radius: 13px 13px 13px 13px;
-   margin-right: 0px
-   
+   margin-right: 10px
 }
