--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -69,6 +69,7 @@ tooltip {
 #disk,
 #network,
 #idle_inhibitor,
+#battery,
 #tray {
     background: #1e1e2e;
     opacity: 1.0;
@@ -116,6 +117,13 @@ tooltip {
 }
 
 #clock {
+    color: #a6e3a1;
+    border-radius: 0px 0px 0px 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+#battery {
     color: #a6e3a1;
     border-radius: 0px 13px 13px 0px;
     margin-right: 0px;
