feat: Installing wallpaperengine

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -132,7 +132,7 @@ tooltip {
 
 #network {
     color: #f9e2af;
-    border-radius: 7px 7px 7px 7px;
+    border-radius: 13px;
     margin-right: 5px;
 }
 
