--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -64,13 +64,11 @@ tooltip {
 #window,
 #pulseaudio,
 #pulseaudio.microphone,
-#power-profiles-daemon,
 #workspaces,
 #memory,
 #disk,
 #idle_inhibitor,
-#battery,
-#custom-notification{
+#battery{
     background: #1e1e2e;
     opacity: 1.0;
     padding: 1.5px 7px 1.5px 7px;
@@ -85,6 +83,7 @@ tooltip {
 #custom-weather,
 #custom-updates,
 #clock,
+#power-profiles-daemon,
 #network,
 #tray {
     background: #1e1e2e;
@@ -137,14 +136,6 @@ tooltip {
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-}
-
-#custom-notification {
-    color: #f38ba8;
-    border-radius: 0px 13px 13px 0px;
-    margin-right: 0px;
-    margin-left: 0px;
-    padding-right: 15px;
 }
 
 #network {
@@ -202,10 +193,9 @@ tooltip {
 }
 
 #power-profiles-daemon {
-   border-radius: 0px 0px 0px 0px;
-   padding-right: 15px;
+   border-radius: 0px 13px 13px 0px;
+   padding-right: 20px;
    padding-left: 10px;
-   margin-right: 0px;
    margin-left: 0px;
 }
 
