feat(gpu-screen-recorder): Added ability to record screen if needed

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -66,6 +66,7 @@ tooltip {
 #disk,
 #idle_inhibitor,
 #power-profiles-daemon,
+#custom-gpu-recorder,
 #battery{
     background: #1e1e2e;
     opacity: 1.0;
